Make BoxLayout main axis clipping relative to main axis alignment

This CL updates BoxLayout to avoid clipping the main axis alignment
point when there isn't enough main axis space.

This means for:
 - left aligned layouts the right most children will be clipped first
   (existing behaviour).
 - center aligned layouts the left and right most children will be
   clipped first.
 - right aligned layouts the left most children will be clipped first.
Where previously the right most children were always clipped first
regardless of the main axis alignment position.

This fixes hosted app titlebar icons such that they clip from the
left instead of clipping out the app menu button first.

Analysis of existing alignment use cases here:
https://bugs.chromium.org/p/chromium/issues/detail?id=862045#c3

Before:
https://bugs.chromium.org/p/chromium/issues/attachment?aid=347613&signed_aid=Nst_-68AwDajlir_GX00cQ==&inline=1
After:
https://bugs.chromium.org/p/chromium/issues/attachment?aid=349265&signed_aid=RgUQgRr8Udaf6_WsZG31ig==&inline=1

Bug: 862045
Change-Id: I073cadced4d9b9172f9c803506c2faadd11683ca
Reviewed-on: https://chromium-review.googlesource.com/1143115
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577463}
Former-commit-id: d7aad75c0070a6d498059edd173e5f668053ce53